# xrpl-clob

./: .gitignore  README.md  api.py  create_test_wallet.py  fund_multisig_wallet.py  generate_multisig_wallet.py  load_multisig_wallet.py  main.py  matching_engine.py  multisig.py  order_book.py  order_cleaner.py  order_signing.py  place_order.py  pyproject.toml  settlement.py  simple_signature_test.py  xrpl_integration.py
docs/: XRPL_Integration.md  api.md  architecture.md  testing.md
tests/: test_matching.py  test_multisig.py  test_settlement.py  test_signatures.py
