[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["joseph <joseph@fdrgroup.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12,<3.13"
xrpl-py = "^3.0.0"
aider-chat = "^0.59.1"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
# Your dev dependencies

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.poetry.extras]
xrpl = ["xrpl-py"]
